--- a/index.html
+++ b/index.html
@@ -8,104 +8,109 @@
         /* Estilos generales */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
         h1 {
-            text-align: center;
             color: #333;
             margin: 20px;
         }
 
-        /* Estilo del mural */
+        /* Mural estilo r/place */
         .mural {
             display: grid;
-            grid-template-columns: repeat(50, 20px); /* Aumenta la cantidad de columnas */
-            grid-template-rows: repeat(50, 20px);    /* Aumenta la cantidad de filas */
+            grid-template-columns: repeat(100, 15px); /* Cuadrícula más grande */
+            grid-template-rows: repeat(100, 15px);    /* Cuadrícula más grande */
             gap: 1px;
-            margin-bottom: 20px;
-            border: 5px solid #333;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+            border: 3px solid #333;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
 
         .cuadro {
-            width: 20px;
-            height: 20px;
-            border: 1px solid #ddd;
-            background-color: #fff;
-            transition: background-color 0.3s ease;
+            width: 15px;
+            height: 15px;
+            background-color: #ffffff;
+            border: 1px solid #ccc;
+            transition: background-color 0.2s ease;
         }
 
         .cuadro:hover {
             cursor: pointer;
-            background-color: #e0e0e0;
         }
 
         /* Estilo de la selección de color */
         .color-picker {
             margin-top: 20px;
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
         }
 
         .color-picker input {
-            width: 60px;
+            width: 50px;
             height: 30px;
             cursor: pointer;
-            border: 1px solid #ccc;
+            border: none;
             border-radius: 5px;
         }
 
-        /* Estilo del mensaje de espera */
+        /* Mensajes de espera */
         #message {
-            margin-top: 20px;
             font-size: 18px;
             color: #333;
+            margin-top: 20px;
         }
 
-        /* Estilo de la sección de información adicional */
+        /* Sección de información */
         .info {
             text-align: center;
             font-size: 14px;
-            color: #555;
+            color: #666;
             margin-top: 30px;
         }
     </style>
 </head>
 <body>
-    <h1>Mural Interactivo</h1>
+    <h1>Mural Interactivo - r/place</h1>
 
-    <!-- Selección de color -->
+    <!-- Selector de colores -->
     <div class="color-picker">
-        <label for="color">Elige un color: </label>
         <input type="color" id="color" value="#ff0000">
+        <input type="color" id="color2" value="#00ff00">
+        <input type="color" id="color3" value="#0000ff">
     </div>
 
     <!-- Mural -->
     <div class="mural" id="mural"></div>
 
     <!-- Mensaje de espera -->
-    <div id="message"></div>
+    <div id="message">¡Haz clic en un cuadro para pintarlo!</div>
 
     <!-- Información adicional -->
     <div class="info">
-        <p><strong>Instrucciones:</strong> Haz clic en los cuadros para pintarlos. Solo puedes pintar un cuadro cada 5 minutos.</p>
-        <p>Elige el color que deseas usar antes de pintar. ¡Diviértete creando tu obra colectiva!</p>
+        <p><strong>Instrucciones:</strong> Haz clic en un cuadro para pintarlo. Solo puedes pintar un cuadro cada 5 minutos.</p>
+        <p>Elige un color antes de pintar.</p>
     </div>
 
     <script>
         const mural = document.getElementById('mural');
         const colorPicker = document.getElementById('color');
+        const colorPicker2 = document.getElementById('color2');
+        const colorPicker3 = document.getElementById('color3');
         const message = document.getElementById('message');
-        let colorSeleccionado = '#ff0000';
 
-        // Crear el mural de 50x50 cuadros (más grande que antes)
-        for (let i = 0; i < 2500; i++) {
+        let colorSeleccionado = '#ff0000'; // Color inicial
+
+        // Crear los 100x100 cuadros
+        for (let i = 0; i < 10000; i++) {
             const cuadro = document.createElement('div');
             cuadro.classList.add('cuadro');
             cuadro.addEventListener('click', () => pintarCuadro(cuadro));
@@ -125,15 +130,24 @@
                 return;
             }
 
-            // Pintar el cuadro y actualizar el tiempo
+            // Pintar el cuadro con el color seleccionado
             cuadro.style.backgroundColor = colorSeleccionado;
-            localStorage.setItem('ultimoTiempo', ahora);  // Guardar la hora de la última acción
 
-            message.innerHTML = `Cuadro pintado en color ${colorSeleccionado}.`;
+            // Actualizar el tiempo de la última pintura
+            localStorage.setItem('ultimoTiempo', ahora);
+
+            // Mensaje
+            message.innerHTML = `¡Cuadro pintado en ${colorSeleccionado}!`;
         }
 
-        // Actualizar el color seleccionado
+        // Cambiar el color seleccionado
         colorPicker.addEventListener('input', (e) => {
+            colorSeleccionado = e.target.value;
+        });
+        colorPicker2.addEventListener('input', (e) => {
+            colorSeleccionado = e.target.value;
+        });
+        colorPicker3.addEventListener('input', (e) => {
             colorSeleccionado = e.target.value;
         });
     </script>
