--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mural Interactivo</title>
+    <title>Mural Interactivo - r/place</title>
     <style>
-        /* Estilos generales */
+        /* Fondo bonito y estructura */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #ff7e5f, #feb47b); /* Fondo con un gradiente */
             margin: 0;
             padding: 0;
             display: flex;
@@ -16,22 +16,27 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            color: #fff;
         }
 
         h1 {
-            color: #333;
-            margin: 20px;
+            font-size: 3em;
+            margin-top: 30px;
+            color: #fff;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7); /* Sombra para hacer el título más visible */
+            font-weight: bold;
         }
 
-        /* Mural estilo r/place */
+        /* Estilo del mural */
         .mural {
             display: grid;
-            grid-template-columns: repeat(100, 15px); /* Cuadrícula más grande */
-            grid-template-rows: repeat(100, 15px);    /* Cuadrícula más grande */
+            grid-template-columns: repeat(100, 15px);
+            grid-template-rows: repeat(100, 15px);
             gap: 1px;
-            margin-top: 20px;
-            border: 3px solid #333;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            margin-top: 30px;
+            border: 3px solid #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
         }
 
         .cuadro {
@@ -40,41 +45,65 @@
             background-color: #ffffff;
             border: 1px solid #ccc;
             transition: background-color 0.2s ease;
+            cursor: pointer;
         }
 
         .cuadro:hover {
-            cursor: pointer;
+            background-color: #f5f5f5;
         }
 
         /* Estilo de la selección de color */
         .color-picker {
-            margin-top: 20px;
             display: flex;
             justify-content: center;
-            gap: 10px;
+            gap: 15px;
+            margin-top: 20px;
+            border-radius: 5px;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
 
         .color-picker input {
-            width: 50px;
-            height: 30px;
+            width: 60px;
+            height: 35px;
             cursor: pointer;
-            border: none;
             border-radius: 5px;
+            border: none;
+            transition: transform 0.3s ease;
         }
 
-        /* Mensajes de espera */
+        .color-picker input:hover {
+            transform: scale(1.1);
+        }
+
+        /* Estilo de los mensajes de espera y instrucciones */
         #message {
-            font-size: 18px;
-            color: #333;
-            margin-top: 20px;
+            font-size: 1.5em;
+            color: #fff;
+            text-align: center;
+            margin-top: 15px;
+            font-weight: bold;
         }
 
-        /* Sección de información */
         .info {
             text-align: center;
-            font-size: 14px;
-            color: #666;
+            font-size: 1.1em;
+            color: #fff;
             margin-top: 30px;
+            font-style: italic;
+        }
+
+        /* Estilo responsive para pantallas más pequeñas */
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 2em;
+            }
+
+            .color-picker {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     </style>
 </head>
