--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mural Interactivo - r/place</title>
     <style>
-        /* Fondo bonito y estructura */
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff7e5f, #feb47b); /* Fondo con un gradiente */
+            font-family: Arial, sans-serif;
+            background-color: #181818; /* Fondo oscuro */
             margin: 0;
             padding: 0;
             display: flex;
@@ -20,31 +19,29 @@
         }
 
         h1 {
-            font-size: 3em;
-            margin-top: 30px;
+            font-size: 3rem;
+            margin-top: 20px;
             color: #fff;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7); /* Sombra para hacer el título más visible */
-            font-weight: bold;
+            text-align: center;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
         }
 
-        /* Estilo del mural */
         .mural {
             display: grid;
-            grid-template-columns: repeat(100, 15px);
-            grid-template-rows: repeat(100, 15px);
+            grid-template-columns: repeat(100, 20px); /* Tamaño pequeño de los cuadros */
+            grid-template-rows: repeat(100, 20px);    /* Tamaño pequeño de los cuadros */
             gap: 1px;
-            margin-top: 30px;
+            margin-top: 20px;
             border: 3px solid #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             border-radius: 10px;
         }
 
         .cuadro {
-            width: 15px;
-            height: 15px;
-            background-color: #ffffff;
-            border: 1px solid #ccc;
-            transition: background-color 0.2s ease;
+            width: 20px;
+            height: 20px;
+            background-color: #fff;
+            border: 1px solid #333;
+            transition: background-color 0.3s ease;
             cursor: pointer;
         }
 
@@ -52,54 +49,46 @@
             background-color: #f5f5f5;
         }
 
-        /* Estilo de la selección de color */
+        /* Color Picker */
         .color-picker {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
             margin-top: 20px;
-            border-radius: 5px;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.5);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            display: flex;
+            gap: 10px;
         }
 
         .color-picker input {
-            width: 60px;
-            height: 35px;
+            width: 40px;
+            height: 40px;
+            border: none;
             cursor: pointer;
             border-radius: 5px;
-            border: none;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s;
         }
 
         .color-picker input:hover {
             transform: scale(1.1);
         }
 
-        /* Estilo de los mensajes de espera y instrucciones */
+        /* Mensajes y textos */
         #message {
-            font-size: 1.5em;
+            font-size: 1.5rem;
+            margin-top: 20px;
             color: #fff;
             text-align: center;
-            margin-top: 15px;
-            font-weight: bold;
         }
 
-        .info {
-            text-align: center;
-            font-size: 1.1em;
+        .instructions {
+            font-size: 1.2rem;
+            margin-top: 20px;
             color: #fff;
-            margin-top: 30px;
-            font-style: italic;
+            text-align: center;
         }
 
-        /* Estilo responsive para pantallas más pequeñas */
+        /* Responsive para móviles */
         @media screen and (max-width: 600px) {
             h1 {
-                font-size: 2em;
+                font-size: 2rem;
             }
-
             .color-picker {
                 flex-direction: column;
                 align-items: center;
@@ -120,11 +109,11 @@
     <!-- Mural -->
     <div class="mural" id="mural"></div>
 
-    <!-- Mensaje de espera -->
+    <!-- Mensaje -->
     <div id="message">¡Haz clic en un cuadro para pintarlo!</div>
 
-    <!-- Información adicional -->
-    <div class="info">
+    <!-- Instrucciones -->
+    <div class="instructions">
         <p><strong>Instrucciones:</strong> Haz clic en un cuadro para pintarlo. Solo puedes pintar un cuadro cada 5 minutos.</p>
         <p>Elige un color antes de pintar.</p>
     </div>
